# web-audit-cli

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
audit/: banner.py  cli.py
audit/detector/: server.py
audit/engine/: confidence.py  evidence.py  score.py
audit/scanner/: dns.py  dns_records.py  geoip.py  http.py  scanner.py  security_headers.py  ssl.py  whois.py
audit/utils/: printer.py
webaudit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
